Fixes init visibility of menu.

--- a/src/components/2-molecules/NavLinks.css
+++ b/src/components/2-molecules/NavLinks.css
@@ -8,7 +8,8 @@
   -webkit-animation-duration:0.5s;
   animation-duration:0.5s;
   -webkit-animation-fill-mode:both;
-  animation-fill-mode:both
+  animation-fill-mode:both;
+  opacity:0;
 }
 
 .fadeIn{
