--- a/src/components/3-organisms/Controls.css
+++ b/src/components/3-organisms/Controls.css
@@ -4,7 +4,7 @@
 }
 
 .controls__item {
-  padding: 15px 10px 10px 10px;
+  margin: 10px;
   text-align: center;
   align-items: center;
 }
@@ -21,4 +21,9 @@
 
 .controls__reset {
   cursor: pointer;
+}
+
+.controls__item:hover,
+.controls__item:focus {
+  outline: none;
 }
